5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4342/executions/1888_1656.log
== TEST (2019-07-09 16:38:12) 
-- CODE:
from numpy import * 
vet = array(eval(input("string:")))
total = 0
for i in range(size(vet)):
	if(vet[0] == "BE"):
		total= total + 1
	elif(vet[1] == "ES"):
		total= total + 1
	elif(vet[2] == "FR"):
		total = total + 1
	elif(vet[3] == "IT"):
		total= total + 1
	elif(vet[4] == "PT"):
		total = total + 1 
print(max(vet))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:38:50) 
-- CODE:
from numpy import * 
vet = array(eval(input("string:"))).split(',')
total = 0
for i in range(size(vet)):
	if(vet[0] == "BE"):
		total= total + 1
	elif(vet[1] == "ES"):
		total= total + 1
	elif(vet[2] == "FR"):
		total = total + 1
	elif(vet[3] == "IT"):
		total= total + 1
	elif(vet[4] == "PT"):
		total = total + 1 
print(max(vet))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:39:24) 
-- CODE:
from numpy import * 
vet = array(eval(input("string:"))).split(',')
total = 0
for i in range(size(vet)):
	if(vet[0] == BE):
		total= total + 1
	elif(vet[1] == ES):
		total= total + 1
	elif(vet[2] == FR):
		total = total + 1
	elif(vet[3] == IT"):
		total= total + 1
	elif(vet[4] == PT):
		total = total + 1 
print(max(vet))
-- ERROR:
File "XXXX", line 11
    elif(vet[3] == IT"):
                       ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:39:31) 
-- CODE:
from numpy import * 
vet = array(eval(input("string:"))).split(',')
total = 0
for i in range(size(vet)):
	if(vet[0] == BE):
		total= total + 1
	elif(vet[1] == ES):
		total= total + 1
	elif(vet[2] == FR):
		total = total + 1
	elif(vet[3] == IT):
		total= total + 1
	elif(vet[4] == PT):
		total = total + 1 
print(max(vet))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:41:52) 
-- CODE:
from numpy import * 
vet = array(eval(input("string:"))).split
total = 0
x = zeros(vet, dtype = int)

for i in range(size(vet)):
	if(vet[0] == BE):
		total= total + 1
	elif(vet[1] == ES):
		total= total + 1
	elif(vet[2] == FR):
		total = total + 1
	elif(vet[3] == IT):
		total= total + 1
	elif(vet[4] == PT):
		total = total + 1 
print(max(vet))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:42:19) 
-- CODE:
from numpy import * 
vet = array(eval(input("string:"))).split
total = 0
x = zeros(vet, dtype = int)

print(vet)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:42:42) 
-- CODE:
from numpy import * 
vet = array(eval(input("string:"))).split(',')
total = 0
x = zeros(vet, dtype = int)

print(vet)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
